# vsupervad

./: readme.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/sogou/vsupervad/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp  jni_log.h  native-lib.cpp
app/src/main/cpp/speech_vad/: jni_log.h
app/src/main/cpp/speech_vad/src/: common.h  file_cut.cpp  file_cut.h  frame_info.h  main.cpp  period_format.cpp  simple_vad.cpp  simple_vad.h  stream_bean.h  stream_thread.h  vad_wrapper.cpp  vad_wrapper.h
app/src/main/cpp/speech_vad/webrtc/common_audio/signal_processing/: cross_correlation.cpp  division_operations.cpp  downsample_fast.cpp  min_max_operations.cpp  resample_48khz.cpp  resample_by_2_internal.cpp  resample_by_2_internal.h  resample_fractional.cpp  spl_init.cpp  vector_scaling_operations.cpp
app/src/main/cpp/speech_vad/webrtc/common_audio/signal_processing/include/: signal_processing_library.h  spl_inl.h
app/src/main/cpp/speech_vad/webrtc/common_audio/vad/: vad.cpp  vad_core.cpp  vad_core.h  vad_filterbank.cpp  vad_filterbank.h  vad_gmm.cpp  vad_gmm.h  vad_sp.cpp  vad_sp.h  webrtc_vad.cpp
app/src/main/cpp/speech_vad/webrtc/common_audio/vad/include/: vad.h  webrtc_vad.h
app/src/main/cpp/speech_vad/webrtc/rtc_base/: checks.cpp  checks.h
app/src/main/cpp/speech_vad/webrtc/rtc_base/numerics/: safe_compare.h
app/src/main/cpp/speech_vad/webrtc/system_wrappers/include/: cpu_features_wrapper.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
(+6 files in other folders)
